added the all the question